--- a/tema3/html/vulnerabilidades.html
+++ b/tema3/html/vulnerabilidades.html
@@ -153,7 +153,7 @@
                     <main>
                         <h1 id="html"><a class="header" href="#html">HTML</a></h1>
 <h2 id="vulnerabilidades"><a class="header" href="#vulnerabilidades">Vulnerabilidades</a></h2>
-<p>&quot;HTML injection&quot; consiste en introducir código HTML malicioso en un formulario o parámetro de la URL que luego será utilizado como contenido en la propia web<sup class="footnote-reference"><a href="#1">1</a></sup>. El código malicioso puede consistir en añadir código HTML/JavaScript<sup class="footnote-reference"><a href="#2">2</a></sup> para robar las cookies de sesión. Otro uso malicioso, que no usa JavaScript, es inyectar un <code>iframe</code>, que simula la página de sesión caducada de una web legítima, para que la víctima introduzca nuevamente sus credenciales (que llegarán al servidor del atacante en el que está alojada).</p>
+<p>HTML Injection consiste en introducir código HTML malicioso en un formulario o parámetro de la URL que luego será utilizado como contenido en la propia web<sup class="footnote-reference"><a href="#1">1</a></sup>. El código malicioso puede consistir en añadir código HTML/JavaScript<sup class="footnote-reference"><a href="#2">2</a></sup> para robar las cookies de sesión. Otro uso malicioso, que no usa JavaScript, es inyectar un <code>iframe</code>, que simula la página de sesión caducada de una web legítima, para que la víctima introduzca nuevamente sus credenciales (que llegarán al servidor del atacante en el que está alojada).</p>
 <p>A continuación vamos a demostrar la vulnerabilidad en una página que procesa el envío de un formulario<sup class="footnote-reference"><a href="#3">3</a></sup>:</p>
 <iframe src="./files/form-xss.html" width="100%" height="235" style="background:white;"></iframe>
 <ol>
