--- a/tema3/html/vulnerabilidades.html
+++ b/tema3/html/vulnerabilidades.html
@@ -178,7 +178,7 @@
                     <main>
                         <h1 id="html"><a class="header" href="#html">HTML</a></h1>
 <h2 id="vulnerabilidades"><a class="header" href="#vulnerabilidades">Vulnerabilidades</a></h2>
-<p>HTML Injection consiste en introducir código HTML malicioso en un formulario o parámetro de la URL que luego será utilizado como contenido en la propia web<sup class="footnote-reference"><a href="#1">1</a></sup>. El código malicioso puede consistir en añadir código HTML/JavaScript<sup class="footnote-reference"><a href="#2">2</a></sup> para robar las cookies de sesión. Otro uso malicioso, que no usa JavaScript, es inyectar un <code>iframe</code>, que simula la página de sesión caducada de una web legítima, para que la víctima introduzca nuevamente sus credenciales (que llegarán al servidor del atacante en el que está alojada).</p>
+<p><strong>HTML Injection</strong> consiste en introducir código HTML malicioso en un formulario o parámetro de la URL que luego será utilizado como contenido en la propia web<sup class="footnote-reference"><a href="#1">1</a></sup>. El código malicioso puede consistir en añadir código HTML/JavaScript<sup class="footnote-reference"><a href="#2">2</a></sup> para robar las cookies de sesión. Otro uso malicioso, que no usa JavaScript, es inyectar un <code>iframe</code>, que simula la página de sesión caducada de una web legítima, para que la víctima introduzca nuevamente sus credenciales (que llegarán al servidor del atacante en el que está alojada).</p>
 <p>A continuación vamos a demostrar la vulnerabilidad en una página que procesa el envío de un formulario<sup class="footnote-reference"><a href="#3">3</a></sup>:</p>
 <iframe src="./files/form-xss.html" width="100%" height="165" style="background:white;"></iframe>
 <ol>
@@ -193,7 +193,7 @@
 </li>
 </ol>
 <blockquote>
-<p><strong>❓ Pregunta:</strong> <em>¿Cómo piensas que se puede arreglar la vulnerabilidad?</em></p>
+<p><strong>❓ Pregunta:</strong> <em>¿Con qué cosa que ya hemos visto se podría arreglar esta vulnerabilidad?</em></p>
 </blockquote>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p>Para que eso ocurra la aplicación web debe almacenar el contenido malicioso del atacante y/o servirlo a otros usuarios víctimas.</p>
